--- a/.github/workflows/generate-sdk.yml
+++ b/.github/workflows/generate-sdk.yml
@@ -1,17 +1,137 @@
-name: publish-sdk
+name: generate-sdk
 
 on:
-  release:
-    types: [published]
-
-env:
-  GEM_HOST_API_KEY: ${{ secrets.RUBYGEMS_API_KEY }}
+  pull_request:
+    branches:
+      - develop
+  schedule:
+    - cron: '15 */4 * * *'
+  workflow_dispatch:
 
 jobs:
+
+  # Generate stage
+  generate-bmcapi:
+    name: Generate BMC API
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/workflows/composite/generate-sdk
+        with:
+          spec-link: https://developers.phoenixnap.com/portals/api/sites/phoenixnap-prod-developerportal/liveportal/apis/bmc/download_spec
+          module-name: BmcApi
+          gem-name: pnap_bmc_api
+  generate-rancherapi:
+    name: Generate Rancher API
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/workflows/composite/generate-sdk
+        with:
+          spec-link: https://developers.phoenixnap.com/portals/api/sites/phoenixnap-prod-developerportal/liveportal/apis/rancher/download_spec
+          module-name: RancherApi
+          gem-name: pnap_rancher_api
+  generate-networkapi:
+    name: Generate Network API
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/workflows/composite/generate-sdk
+        with:
+          spec-link: https://developers.phoenixnap.com/portals/api/sites/phoenixnap-prod-developerportal/liveportal/apis/networks/download_spec
+          module-name: NetworkApi
+          gem-name: pnap_network_api
+  generate-ipapi:
+    name: Generate IP API
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/workflows/composite/generate-sdk
+        with:
+          spec-link: https://developers.phoenixnap.com/portals/api/sites/phoenixnap-prod-developerportal/liveportal/apis/ips/download_spec
+          module-name: IpApi
+          gem-name: pnap_ip_api
+  generate-auditapi:
+    name: Generate Audit API
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/workflows/composite/generate-sdk
+        with:
+          spec-link: https://developers.phoenixnap.com/portals/api/sites/phoenixnap-prod-developerportal/liveportal/apis/bmc-audit/download_spec
+          module-name: AuditApi
+          gem-name: pnap_audit_api
+  generate-tagapi:
+    name: Generate Tag API
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/workflows/composite/generate-sdk
+        with:
+          spec-link: https://developers.phoenixnap.com/portals/api/sites/phoenixnap-prod-developerportal/liveportal/apis/tags/download_spec
+          module-name: TagApi
+          gem-name: pnap_tag_api
+  generate-networkstorageapi:
+    name: Generate Network Storage API
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/workflows/composite/generate-sdk
+        with:
+          spec-link: https://developers.phoenixnap.com/portals/api/sites/phoenixnap-prod-developerportal/liveportal/apis/network-storage/download_spec
+          module-name: NetworkStorageApi
+          gem-name: pnap_network_storage_api
+
+  # Push generated code
+  push-changes:
+    name: Push Changes
+    runs-on: ubuntu-latest
+    if: |
+      (github.event_name == 'schedule') ||
+      (github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/develop') || (
+        startsWith(github.head_ref, 'feature') == true &&
+        github.base_ref == 'develop' &&
+        github.event.pull_request.head.repo.full_name == 'phoenixnap/ruby-sdk-bmc'
+      )
+    needs:
+      - generate-bmcapi
+      - generate-rancherapi
+      - generate-networkapi
+      - generate-ipapi
+      - generate-auditapi
+      - generate-tagapi
+      - generate-networkstorageapi
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+        with:
+          persist-credentials: false
+          fetch-depth: 0
+          ref: ${{ github.event_name == 'schedule' && 'develop' || github.head_ref }}
+      - name: Download Artifacts
+        uses: actions/download-artifact@v3
+      - name: Move spec files
+        run: |
+          find . -type f -name "*.spec.yaml" -not -path "./specs/*" -print0 | xargs -0 mv -ft ./specs/
+      - name: Add and Commit files
+        run: |
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add -A
+
+          if test "$(git status --porcelain=v1 2>/dev/null | wc -l)" -gt "0" ; then git commit -m "Add changes"; else echo No changes found; fi
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.event_name == 'schedule' && 'develop' || github.head_ref }}
+  
   # Build stage
   build-bmcapi:
     name: Build BMC API
     runs-on: ubuntu-latest
+    needs:
+      - generate-bmcapi
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/workflows/composite/build-sdk
@@ -20,6 +140,8 @@ jobs:
   build-rancherapi:
     name: Build Rancher API
     runs-on: ubuntu-latest
+    needs:
+      - generate-rancherapi
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/workflows/composite/build-sdk
@@ -28,6 +150,8 @@ jobs:
   build-networkapi:
     name: Build Network API
     runs-on: ubuntu-latest
+    needs:
+      - generate-networkapi
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/workflows/composite/build-sdk
@@ -36,6 +160,8 @@ jobs:
   build-ipapi:
     name: Build IP API
     runs-on: ubuntu-latest
+    needs:
+      - generate-ipapi
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/workflows/composite/build-sdk
@@ -44,6 +170,8 @@ jobs:
   build-auditapi:
     name: Build Audit API
     runs-on: ubuntu-latest
+    needs:
+      - generate-auditapi
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/workflows/composite/build-sdk
@@ -52,6 +180,8 @@ jobs:
   build-tagapi:
     name: Build Tag API
     runs-on: ubuntu-latest
+    needs:
+      - generate-tagapi
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/workflows/composite/build-sdk
@@ -60,12 +190,14 @@ jobs:
   build-networkstorageapi:
     name: Build Network Storage API
     runs-on: ubuntu-latest
+    needs:
+      - generate-networkstorageapi
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/workflows/composite/build-sdk
         with:
           module-name: NetworkStorageApi
-
+  
   # Lint stage
   lint-bmcapi:
     name: Lint BMC API
@@ -137,7 +269,7 @@ jobs:
       - uses: ./.github/workflows/composite/lint-sdk
         with:
           module-name: NetworkStorageApi
-
+  
   # Test stage
   test-bmcapi:
     name: Test Bmc API
@@ -287,9 +419,8 @@ jobs:
           test-report-dir: tests
           ruby-version: ${{ matrix.ruby-version }}
 
-  process-tag-info:
-    name: Process information in Tag name
-    runs-on: ubuntu-latest
+  publish-test-results:
+    name: Publish Test Results
     needs:
       - test-bmcapi
       - test-rancherapi
@@ -298,49 +429,15 @@ jobs:
       - test-auditapi
       - test-tagapi
       - test-networkstorageapi
-    outputs:
-      module: ${{ steps.step1.outputs.module }}
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          ref: ${{ github.ref }}
-      - name: Determining release type
-        id: step1
-        run: |
-          TAG=${{ github.ref }}
-          IFS='/' read -r -a array <<< "${TAG#refs/*/}"
-
-          if [ "${#array[@]}" -eq "2" ]; then
-              MODULE=${array[0]}
-              VERSION=${array[1]}
-
-              echo Verifying version is actually v$VERSION...
-              if [ "$VERSION" != "v$(cat ./$MODULE/VERSION)" ]; then
-                  echo Version "in" tag \($VERSION\) does not match module version \($(cat ./$MODULE/VERSION)\)
-                  exit 1
-              fi 
-
-              echo Is submodule release. Publishing $MODULE v$VERSION to registry.
-              echo "::set-output name=module::$MODULE"
-          else
-              echo Is main release. Skipping.
-          fi
-  
-  publish-ruby-gems:
-    name: Publish to RubyGems
-    if: needs.process-tag-info.outputs.module != 0
     runs-on: ubuntu-latest
-    needs: process-tag-info
+    if: always()
     steps:
-      - uses: actions/checkout@v3
+      - name: Download Artifacts
+        uses: actions/download-artifact@v3
         with:
-          ref: ${{ github.ref }}
-      - run: |
-          echo Entering ${{ needs.process-tag-info.outputs.module }}...
-          cd ./${{ needs.process-tag-info.outputs.module }}
-
-          echo Building...
-          gem build *.gemspec
-
-          echo Publishing...
-          gem push *.gem
+          path: test-reports
+      - name: Publish Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v1
+        with:
+          files: test-reports/**/*.xml
+          check_name: "Test Results"
